# CoreCalendar

./: .gitignore  Cargo.toml  database.db  init.cmd  init.sh
crates/appstate/: Cargo.toml
crates/appstate/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/calendar_server/: Cargo.toml
crates/calendar_server/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/configman/: Cargo.toml
crates/configman/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/sql/: authentication_delete_by_username.sql  authentication_insert.sql  authentication_schema.sql  authentication_select_by_username.sql  authentication_select_salt_by_username.sql  authentication_update_email.sql  authentication_update_password.sql  mod.rs  user_global_permissions.sql
crates/db/src/sql/calendar/: mod.rs  permissions_schema.sql  schema.sql
crates/db/src/sql/event/: mod.rs  schema.sql
crates/db/src/sql/permissions/: mod.rs  permissions_check.sql  permissions_insert.sql  permissions_list.sql  permissions_remove.sql  permissions_schema.sql
crates/db/src/sql/recurring_event/: mod.rs  schema.sql
crates/global_constants/: Cargo.toml
crates/global_constants/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs
crates/theme/: Cargo.toml
crates/webserver/: Cargo.toml  build.rs
crates/webserver/html_src/: calendar-extras.js  calendar.css  calendar.js  index.html
crates/webserver/html_src/app/: globals.css  layout.tsx  page.tsx
crates/webserver/html_src/components/: CustomColorSelect.js  calendar-app.tsx  theme-toggle.tsx
crates/webserver/src/: lib.rs
crates/webserver/src/html_src/: index.html  jquery-3.7.1.min.js  main.js  style.css
crates/websockets/: Cargo.toml
crates/websockets/src/: lib.rs
