[workspace]
resolver = "3"
members = [
    "crates/*",
]
default-members = [
    "crates/calendar_server",
]
[workspace.dependencies]
ansi_escapers = "0.2.0"
axum = { version = "0.8.4", features = ["tokio", "http1", "ws", "json", "tracing"] }
chrono = { version = "0.4.41", features = ["serde"] }
colorlab = { git = "https://github.com/SturdyFool10/ColorLab.git" }
humantime = "2.2.0"
humantime-serde = "1.1.1"
hyper = { version = "1.7.0", features = ["server", "http1"] }
jsonwebtoken = "9.3.1"
regex = "1.11.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustls = { version = "0.23.31", features = ["std", "tls12"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tungstenite = { version = "0.27.0", features = ["handshake", "http", "sha1", "httparse"] }
futures = "0.3"
futures-util = { version = "0.3.31", features = ["sink", "tokio-io", "unstable", "write-all-vectored"] }
rmp-serde = "1.3.0"
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4"] }


#internal deps
appstate = { path = "crates/appstate" }
config = { path = "crates/config" }
db = { path = "crates/db" }
theme = { path = "crates/theme" }
webserver = { path = "crates/webserver" }
websockets = { path = "crates/websockets" }
auth = { path = "crates/auth" }
global_constants = { path = "crates/global_constants" }
logging = { path = "crates/logging" }
configman = { path = "crates/configman" }
