[package]
name = "calendar_server"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { workspace = true }
tokio.workspace = true
logging.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ansi_escapers = { workspace = true }
