[package]
name = "calendar_server"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { workspace = true }
tokio.workspace = true
logging.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ansi_escapers = { workspace = true }
config.workspace = true
serde_json.workspace = true
configman.workspace = true
global_constants.workspace = true
axum.workspace = true
hyper.workspace = true
rustls.workspace = true
tungstenite.workspace = true
appstate.workspace = true
webserver.workspace = true
