[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { workspace = true }
global_constants.workspace = true
ansi_escapers = { workspace = true }
regex.workspace = true
colored = { workspace = true }
once_cell = { workspace = true }
