[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
rustls = { workspace = true }
tungstenite = { workspace = true }
websockets.workspace = true
config.workspace = true
appstate.workspace = true
