[package]
name = "webserver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tracing = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
rustls = { workspace = true }
tungstenite = { workspace = true }
websockets.workspace = true
config.workspace = true
appstate.workspace = true
tokio.workspace = true
global_constants.workspace = true
futures-util.workspace = true
rmp-serde.workspace = true
uuid.workspace = true
tower-http = { version = "0.6.6", features = ["fs"] }
